--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
@@ -45,6 +45,50 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
+
+
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // Persistence
+    implementation 'io.realm:realm-android:0.87.1'
+
+    // Dependency Injection
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
+
+    // Unit Tests
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:4.2.1"
+    testImplementation "org.mockito:mockito-core:2.25.0"
+    testImplementation 'org.robolectric:shadows-support-v4:3.0'
+    testImplementation 'com.android.support.test:runner:1.0.2'
+    testImplementation 'com.android.support:support-annotations:28.0.0'
+
+
+    // Instrumetation Tests
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    // Set this dependency to use JUnit 4 rules
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    // Set this dependency to build and run Espresso tests
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Support annotations
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    // Espresso-contrib for DatePicker, RecyclerView, Drawer actions, Accessibility checks, CountingIdlingResource
+    androidTestImplementation ('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+        exclude module: 'support-annotations'
+        exclude module: 'support-v4'
+        exclude module: 'support-v13'
+        exclude module: 'recyclerview-v7'
+    }
+
+
+
+
+
+
+
 
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
